# WatchEmRun

./: README.md  pyproject.toml
src/data/: chicago_marathon.gpx
src/watchemrun/consts/: constants.py
src/watchemrun/jobs/: lat_long_converter.py
src/watchemrun/schema/: race.py  registry.py  route.py
